# joemull.github.io

./: .gitignore  .prettierrc.toml  CNAME  README.md  before-high-ground.html  config.py  copyediting.html  dev-requirements.txt  harvard-library.html  humanities-open-book.html  index.html  library-lab.html  package.json  projects.html  pyproject.toml  readme.md  requirements.in  requirements.txt  site.py
.git-hooks/: pre-commit
.github/workflows/: deploy.yml
assets/stylesheets/: main.css
css/: main.css
design/: contact.html  index.html
design/css/: style.css
discussions/: README.md  index.html
discussions/debugging/: index.html
discussions/w7-js/: index.html
final_proj/: issue_doc.md  ref-draft.md  review.md
homework11/: challenge1.html  challenge2.html  challenge3.html  challenge5.html
homework11/js/: challenge1.js  challenge2.js  challenge3.js  challenge4.js  challenge5.js
homework13/: index.html  sample_response.json  weather_begin.html
homework2/css/: style.css
homework3/: index.html
homework3/css/: style.css
homework4/: index.html
homework4/css/: style.css
homework6/: formDiscussion.html
homework7/: jsquiz.html
homework8/: canvas_start.html  index.html
images/book-covers/: ownby-hurtin.avif
inc/: birkbeck-licensing.md  foot.md  licensing.md  lower-decks-2026.md  menu.md  site-description.md  uri.html
lib/meteor/: readme.md
portfolio/: about.html  contact.html  copyediting.html  harvard-library.html  humanities-open-book.html  index.html  library-lab.html  projects.html
src/: about.md  index.md
video/: index.html
(+86 files in other folders)
